--- a/.github/workflows/main (Build IOS).yml
+++ b/.github/workflows/main (Build IOS).yml
@@ -95,8 +95,8 @@ jobs:
 
           IOS_BUILD_PATH: ${{ format('{0}/build/iOS', github.workspace) }}
           IOS_BUNDLE_ID: com.netzached.app #${{ secrets.IOS_BUNDLE_ID }} #com.flop.app
-          APP_VERSION: "1.0.2" #${{ secrets.APP_VERSION }} #"1.0.0"
-          PROJECT_NAME: Bidrass #${{ secrets.PROJECT_NAME }} #ukoldgen
+          APP_VERSION: "1.0.3" #${{ secrets.APP_VERSION }} #"1.0.0"
+          PROJECT_NAME: Bravetor #${{ secrets.PROJECT_NAME }} #ukoldgen
         run: |
           eval "$(ssh-agent -s)"
           ssh-add - <<< "${MATCH_DEPLOY_KEY}"
